--- a/style.css
+++ b/style.css
@@ -71,3 +71,70 @@ body {
 .iconlist li:last-child{
     margin-right: 0;
 }
+
+/* worksスタイルシート */
+.works{
+    margin: 80px 0;
+}
+
+.workslist{
+    list-style: none;
+    width: 100%;
+    max-width: 1076;
+    margin: 30px auto;
+    padding: 0;
+    text-align: left;
+    overflow: hidden;
+}
+
+.workslist li{
+    display: block;
+    width: 100%;
+    max-width: 348px;
+    float: left;
+    margin-right: 15px;
+}
+
+.workslist li:last-child{
+    margin-right: 0;
+}
+
+.workslist li img{
+    width: 100%;
+    border: 1px solid #ccc;
+}
+
+.workslist li h3{
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.workslist li span{
+    font-size: 18px;
+}
+
+.workslist li .link{
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    margin-top: 15px;
+}
+
+.workslist li .link a{
+    background-color: rgb(226, 226, 226);
+    padding: 5px 20px;
+    margin-right: 10px;
+    font-size: 15px;
+    text-decoration: none;
+    color: #000;
+}
+
+/* footerスタイルシート */
+
+.blockfooter p {
+    color: both;
+    text-align: center;
+    font-size: 15px;
+    margin: 50px 0 20px;
+
+}
